--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,49 @@ Cargo.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# Ignore Rust build artifacts
+target/
+**/*.rs.bk
+Cargo.lock
+
+# Ignore compiled binaries
+*.exe
+*.out
+*.o
+
+# Ignore environment files (contains secrets)
+.env
+.env.local
+.env.*.local
+
+# Ignore logs and debug output
+logs/
+*.log
+debug.log
+*.tmp
+
+# Ignore database files (if using SQLite for testing)
+db.sqlite
+db.sqlite-journal
+
+# Ignore Node.js-related files (if used in frontend)
+node_modules/
+package-lock.json
+yarn.lock
+
+# Ignore Postman collections (optional)
+bth-server-postman.json
+
+# Ignore VS Code settings
+.vscode/
+
+# Ignore macOS system files
+.DS_Store
+
+# Ignore JetBrains IDE settings
+.idea/
+*.iml
+
+# Ignore Linux system files
+*.swp
+*.swo
