--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ actix-web="*"
 dotenvy = "*"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
-sqlx = { version = "*", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
+sqlx = { version = "*", features = ["runtime-tokio-native-tls", "postgres", "macros","chrono","uuid"] }
 tokio = { version = "*", features = ["full"] }
 jsonwebtoken = "*"
 chrono = { version = "*", features = ["serde"] }
@@ -20,4 +20,6 @@ futures-channel = "*"
 tokio-tungstenite = "*"
 uuid = { version = "*", features = ["v4", "serde"] }
 actix-web-actors="*"
-geo="*"
+geoutils="*"
+strum="*"
+strum_macros="*"
